# flashcards

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  flashcard.py  pyproject.toml
.github/workflows/: python-package.yml
data/: Core2000.txt  genki-all.txt  genki.txt  known.txt  n1.csv  n2.csv  n3.csv  n5.csv  wk10.csv  wk20.csv  wk30.csv  wk40.csv  wk50.csv  wk60.csv
sample/: n2.csv  n3-lite.csv  n4.csv  saikik.S01E01.ja.srt  tiny.apkg  tiny.csv  verbs.csv
scripts/: main.py  web.py
srt/: analyze_pdf.py  config.py  flashcard_pdf.py  generate_anki.py  generate_pdf.py  generate_pdf_html.py  images_from_pdf.py  lib.py  schema.py
srt/templates/: base.html  index.html  upload_csv.html  upload_srt.html
tests/: test_main.py  test_ruby_annotation.py  test_web.py
