[project]
name = "flashcards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.56.5",
    "pysrt>=1.1.2",
    "typer>=0.15.1",
    "genanki>=0.13.1",
    "pydantic-settings>=2.7.1",
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "flask-limiter>=3.9.2",
    "google-cloud-texttospeech>=2.23.0",
    "reportlab>=4.2.5",
    "bs4>=0.0.2",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srt"]

[tool.hatch.build.targets.binary]
scripts = ["cmd_main", "cmd_web"]
python-version = "3.12"

[dependency-groups]
dev = [
    "hatch>=1.14.0",
]

[project.scripts]
cmd_main = "scripts:main"
cmd_web = "scripts:web"
