[project]
name = "flashcards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "flask-limiter>=3.9.2",
    "flask>=3.1.0",
    "genanki>=0.13.1",
    "google-cloud-texttospeech>=2.23.0",
    "litellm>=1.56.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "pypdfium2>=4.30.1",
    "pysrt>=1.1.2",
    "pytest>=8.3.4",
    "reportlab>=4.2.5",
    "typer>=0.15.1",
    "jinja2>=3.1.5",
    "playwright>=1.49.1",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srt"]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
]
